# gneuralknockoff

./: .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  THANKS  configure.ac
doc/: README  nnet.1  nnet_language.1
include/: activation.h  binom.h  defines.h  error.h  fact.h  feedforward.h  genetic_algorithm.h  gradient_descent.h  includes.h  load.h  msmco.h  network.h  parser.h  random_search.h  randomize.h  rnd.h  save.h  simulated_annealing.h
src/: Makefile.am  Makefile.in  activation.c  activation.h  binom.c  binom.h  defines.h  error.c  error.h  fact.c  fact.h  feedforward.c  feedforward.h  genetic_algorithm.c  genetic_algorithm.h  gneural_network  gneural_network.c  gradient_descent.c  gradient_descent.h  includes.h  load.c  load.h  msmco.c  msmco.h  network.c  nnet.c  parser.c  parser.h  random_search.c  random_search.h  randomize.c  randomize.h  rnd.c  rnd.h  save.c  save.h  simulated_annealing.c  simulated_annealing.h  structures.h
tests/: curve_fitting.input  curve_fitting_quadratic_function.input  curve_fitting_quadratic_function.nnet  curve_fitting_square_root.input  invert_order.input  modulus_of_two_dimensional_vectors.input
